--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,7 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300&display=swap')
+@tailwind base
+@tailwind components
+@tailwind utilities
 
 body
   font-family: 'Almarai', sans-serif
-  background-color: #f5f5f5
+  background-color: #f8f8f8
   text-align: right
