inbox styling breakpoint

--- a/src/app/pages/inbox/components/detailed/detailed.component.html
+++ b/src/app/pages/inbox/components/detailed/detailed.component.html
@@ -1,3 +1,79 @@
-<p>
-  detailed works!
-</p>
+<div class="bg-white mr-4 rounded shadow-lg">
+  <div class="px-6 py-4">
+    <div class="font-bold text-xl mb-2">امانة عسير</div>
+    <p class="text-gray-700 text-base">
+      هذا مثال لنص يمكن استبداله
+    </p>
+  </div>
+  <hr
+    class="my-12 h-px border-t-0 bg-transparent bg-gradient-to-r from-transparent via-neutral-500 to-transparent opacity-25 dark:opacity-100" />
+  <p>الاجراءات السريعة</p>
+  <div>
+    <button type="button"
+      class="text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Purple
+      to Blue</button>
+    <button type="button"
+      class="text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Cyan
+      to Blue</button>
+    <button type="button"
+      class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Green
+      to Blue</button>
+    <button type="button"
+      class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Purple
+      to Pink</button>
+    <button type="button"
+      class="text-white bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Pink
+      to Orange</button>
+    <button type="button"
+      class="text-gray-900 bg-gradient-to-r from-teal-200 to-lime-200 hover:bg-gradient-to-l hover:from-teal-200 hover:to-lime-200 focus:ring-4 focus:outline-none focus:ring-lime-200 dark:focus:ring-teal-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Teal
+      to Lime</button>
+    <button type="button"
+      class="text-gray-900 bg-gradient-to-r from-red-200 via-red-300 to-yellow-200 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Red
+      to Yellow</button>
+  </div>
+  <div class="flex justify-center">
+    <!-- Dropdown menu -->
+    <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown"
+      class="text-white bg-gradient-to-bl from-green-300 to-green-800 hover:bg-green-900 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-s text-sm px-12 py-2.5 text-center inline-flex items-center "
+      type="button">مذكرة داخلية <svg class="w-4 h-4 ml-2" aria-hidden="true" fill="none" stroke="currentColor"
+        viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+      </svg></button>
+    <!-- Dropdown menu -->
+    <div id="dropdown" class="z-10 hidden  divide-y divide-gray-100 rounded-s shadow w-44">
+      <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
+        <li>
+          <a href="#"
+            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
+        </li>
+        <li>
+          <a href="#"
+            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Settings</a>
+        </li>
+        <li>
+          <a href="#"
+            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Earnings</a>
+        </li>
+        <li>
+          <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Sign
+            out</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="bg-white shadow-md rounded-s m-5 p-4 pb-20">
+    <div class="flex flex-row-reverse justify-between mb-8">
+      <h3 class="font-semibold">خطاب</h3>
+      <p>icon</p>
+    </div>
+    <div>
+      <h4>بسم الله</h4>
+      <h6>السلام عليكم ورحمة الله وبركاته</h6>
+      <p class="text-gray-700 font-bold text-base">
+        هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
+        هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
+        هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
+      </p>
+    </div>
+    </div>
+    </div>
