--- a/src/app/pages/inbox/components/home/home.component.html
+++ b/src/app/pages/inbox/components/home/home.component.html
@@ -1,6 +1,8 @@
+<div class="m-5 ">
 <p>
 البريد الوارد</p>
 <h3 class="font-bold">الفلترة والبحث</h3>
+</div>
 <div class="search-bar mr-5 ">
     <div class="bg-white rounded-s shadow-md">
         <ul
@@ -77,7 +79,7 @@
     </div>
     </ul>
 </div>
-<div class="container m-5">
+<div class="container">
 <router-outlet></router-outlet>
 </div>
 </div>
