add treatment resolver

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- component -->
 <div class="min-h-screen min-w-screen">
-    <header class="flex flex-nowrap flex-row-reverse py-5 bg-white shadow-md">
+    <header class="flex flex-nowrap flex-row-reverse py-5 bg-white shadow-md sticky">
         <nav class="w-full mx-auto px-2 sm:flex sm:items-center sm:justify-between" aria-label="Global">
             <div class="flex flex-row-reverse items-left gap-5 mt-5 ml-5">
                 test
