--- a/src/app/pages/inbox/components/detailed/detailed.component.html
+++ b/src/app/pages/inbox/components/detailed/detailed.component.html
@@ -1,8 +1,8 @@
-<div class="bg-white mr-4 rounded shadow-lg">
+<div class="bg-white mr-4 pb-12 rounded-s shadow-lg">
   <div class="px-6 py-4">
-    <div class="font-bold text-xl mb-2">امانة عسير</div>
+    <div class="font-bold text-xl mb-2">{{treatment$.subject}}</div>
     <p class="text-gray-700 text-base">
-      هذا مثال لنص يمكن استبداله
+      {{treatment$.description}}
     </p>
   </div>
   <hr
