--- a/src/app/pages/inbox/components/home/home.component.html
+++ b/src/app/pages/inbox/components/home/home.component.html
@@ -33,10 +33,9 @@
             </li>
         </ul>
     </div>
-    <div class=" rounded-s shadow-inner">
-        <form class="flex items-center">
-            <label for="simple-search" class="sr-only">البحث باسم معاملة</label>
-            <div class="relative w-full">
+    <div class="">
+        <form class="flex flex-row-reverse items-center">
+            <div class="">
                 <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
                     <svg aria-hidden="true" class="w-5 h-5 text-gray-500 " fill="currentColor" viewBox="0 0 20 20"
                         xmlns="http://www.w3.org/2000/svg">
@@ -46,7 +45,7 @@
                     </svg>
                 </div>
                 <input type="text" id="simple-search"
-                    class="bg-gray-50 border border-gray-900 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5    dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                    class="bg-gray-50 border border-gray-200 text-gray-900 text-sm text-right rounded-s shadow-md p-2.5 pl-20 ml-5 w-100"
                     placeholder="البحث باسم معاملة" required>
             </div>
             <button type="submit"
@@ -67,13 +66,26 @@
 </div>
 <div class="main-content">
     <div class="columns-1 mr-5">
-        <div class="text-green-700 font-semibold bg-white inline-block w-80 p-5 ">المعاملات</div>
+        <div class="text-green-700 border-solid border-2 border-gray-200 font-semibold bg-white inline-block w-80 py-5 px-3">
+            المعاملات</div>
         <ul>
-        <div class="text-green-700 font-semibold bg-white inline-block w-80 p-5 my-5">
-        <li *ngFor="let treatment of (treatments$|async)">
-            <a class="block max-w-sm p-6 my-5 bg-white border border-gray-200 rounded-s shadow hover:bg-green-50">
-                <h5 class="mb-2 tracking-tight text-gray-900"> {{treatment.subject}}</h5>
+        <div class=" font-semibold bg-white  w-80 p-1 my-1 overflow-y-scroll">
+            <li *ngFor="let treatment of (treatments$|async)">
+                    <a class="block max-w-sm p-2 my-1 bg-white border border-gray-200 rounded-s shadow hover:bg-gray-50"
+                        [routerLink]="treatment.id" routerLinkActive="active">
+                        <div class="flex flex-row-reverse justify-between">
+                            <h5 class="mb-2 text-gray-900"> {{treatment.subject}}</h5>
+                            <p>{{treatment.date}}</p>
+                        </div>
                 <p class="font-normal text-gray-400 ">{{treatment.description}}</p>
+                <div class="flex flex-wrap pt-2">
+                    <span
+                        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">خطاب#</span>
+                    <span
+                        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">مذكرة#</span>
+                    <span
+                        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">عرض#</span>
+                </div>
             </a>
             </li>
     </div>
