--- a/src/app/pages/inbox/components/home/home.component.html
+++ b/src/app/pages/inbox/components/home/home.component.html
@@ -1,69 +1,21 @@
+<!-- breadcrumb and header -->
 <div class="m-5 ">
-<p>
-البريد الوارد</p>
-<h3 class="font-bold">الفلترة والبحث</h3>
+    <app-breadcrumb [supProgramName]="'البريد'" [childSubProgramName]="'الوارد'"></app-breadcrumb>
+    <h3 class="font-bold mt-2 mr-1">الفلترة والبحث</h3>
 </div>
-<div class="search-bar mr-5 ">
-    <div class="bg-white rounded-s shadow-md">
-        <ul
-            class="flex flex-wrap flex-row-reverse text-sm font-medium text-center text-gray-500 dark:text-gray-400 ml-2">
-            <li class="mr-2">
-                <a
-                    class="inline-block px-4 py-2 my-1 text-white border-solid border-2 border-gray-200  bg-gradient-to-bl from-green-400 to-green-700 rounded-sm shadow-inner">الجميع</a>
-            </li>
-            <li class="mr-2 ">
-                <a
-                    class="inline-block px-4 py-2 my-1 border-solid border-2 border-gray-200 rounded-sm hover:text-gray-900 hover:bg-gray-200">الجديد</a>
-            </li>
-            <li class="mr-2">
-                <a
-                    class="inline-block px-4 py-2 my-1 border-solid border-2 border-gray-200 rounded-sm hover:text-gray-900 hover:bg-gray-200">المؤجل</a>
-            </li>
-            <li class="mr-2">
-                <a
-                    class="inline-block px-4 py-2 my-1 border-solid border-2 border-gray-200 rounded-sm hover:text-gray-900 hover:bg-gray-200">عاجلة</a>
-            </li>
-            <li class="mr-2">
-                <a
-                    class="inline-block px-4 py-2 my-1 border-solid border-2 border-gray-200 rounded-sm hover:text-gray-900 hover:bg-gray-200">للتوقيع</a>
-            </li>
-            <li class="mr-2">
-                <a
-                    class="inline-block px-4 py-2 my-1 border-solid border-2 border-gray-200 rounded-sm hover:text-gray-900 hover:bg-gray-100">الطلبات</a>
-            </li>
-        </ul>
-    </div>
-    <div class="">
-        <form class="flex flex-row-reverse items-center">
-            <div class="">
-                <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
-                    <svg aria-hidden="true" class="w-5 h-5 text-gray-500 " fill="currentColor" viewBox="0 0 20 20"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd"
-                            d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-                            clip-rule="evenodd"></path>
-                    </svg>
-                </div>
-                <input type="text" id="simple-search"
-                    class="bg-gray-50 border border-gray-200 text-gray-900 text-sm text-right rounded-s shadow-md p-2.5 pl-20 ml-5 w-100"
-                    placeholder="البحث باسم معاملة" required>
-            </div>
-            <button type="submit"
-                class="p-2.5 ml-2 text-sm font-medium text-white bg-green-700 rounded-lg border border-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-blue-300">
-                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-                </svg>
-                <span class="sr-only">البحث باسم معاملة</span>
-            </button>
-        </form>
+<!-- breadcrumb and header -->
 
-    </div>
+<!-- search-bar -->
+<div class="search-bar mr-5 ">
+<app-tab-bar></app-tab-bar>
+<app-search-bar></app-search-bar>
     <div class=" rounded-s text-green-700">
         البحث المتقدم
     </div>
 </div>
+<!-- search-bar -->
+
+<!-- main-content -->
 <div class="main-content">
     <div class="columns-1 mr-5">
         <div class="text-green-700 border-solid border-2 border-gray-200 font-semibold bg-white inline-block w-80 py-5 px-3">
@@ -91,7 +43,11 @@
     </div>
     </ul>
 </div>
+<!-- main-content -->
+
+<!-- side-content -->
 <div class="container">
 <router-outlet></router-outlet>
 </div>
 </div>
+<!-- side-content -->
