--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- component -->
 <div class="min-h-screen min-w-screen">
-    <header class="flex flex-nowrap flex-row-reverse py-5 bg-white shadow-md sticky">
+    <!-- TODO: Remove below code to the shared module -->
+    <!-- <header class="flex flex-nowrap flex-row-reverse py-5 bg-white shadow-md sticky">
         <nav class="w-full mx-auto px-2 sm:flex sm:items-center sm:justify-between" aria-label="Global">
             <div class="flex flex-row-reverse items-left gap-5 mt-5 ml-5">
                 test
@@ -9,7 +10,8 @@
                 <img src="../assets/asir_logo.jpg" class="w-40 h-10">
             </div>
         </nav>
-    </header>
+    </header> -->
+    
     <!-- component -->
     <!-- <div class="bg-gray-100 h-screen flex justify-end items-center">
         <div class=" flex  flex-col items-center ">
