--- a/src/app/pages/auth/components/signup/signup.component.html
+++ b/src/app/pages/auth/components/signup/signup.component.html
@@ -1,3 +1,84 @@
-<p>
-  signup works!
-</p>
+<section class="bg-#f8f8f8">
+  <div class="lg:grid lg:min-h-screen lg:grid-cols-12">
+    <section class="relative flex h-32 items-end bg-gray-900 lg:col-span-5 lg:h-full xl:col-span-6">
+      <img alt="Night" src="../../../../../assets/side_img.png"
+        class="absolute inset-0 h-full w-full object-cover opacity-80" />
+
+      <div class="hidden lg:relative lg:block lg:p-12">
+        <a class="block text-white" href="/">
+          <span class="sr-only">Home</span>
+          <img src="../../../../../assets/asir_logo.jpg" class="h-8 sm:h-10 rounded-full" alt="">
+        </a>
+
+        <h2 class="mt-6 text-2xl font-bold text-white sm:text-3xl md:text-4xl">
+          مرحبا بكم في منصة مكين لايت
+        </h2>
+
+        <p class="mt-4 leading-relaxed text-white/90">
+          كل الحقوق محفوظة @القمم للحاسبات والنظم الالكترونية
+        </p>
+      </div>
+    </section>
+
+    <main aria-label="Main"
+      class="flex items-center justify-center px-8 py-8 sm:px-12 lg:col-span-7 lg:px-16 lg:py-12 xl:col-span-6">
+      <div class="max-w-xl lg:max-w-3xl">
+        <div class="relative -mt-16 block lg:hidden">
+          <a class="inline-flex h-16 w-16 items-center justify-center rounded-full bg-white text-blue-600 sm:h-20 sm:w-20"
+            href="/">
+            <span class="sr-only">Home</span>
+            <img src="../../../../../assets/logo_2.jpg" class="h-max  rounded-full" alt="">
+          </a>
+
+          <h1 class="mt-2 text-2xl font-bold text-gray-900 sm:text-3xl md:text-4xl">
+            مرحبا بكم في منصة مكين لايت
+          </h1>
+
+          <p class="mt-4 leading-relaxed text-gray-500">
+            كل الحقوق محفوظة @القمم للحاسبات والنظم الالكترونية
+          </p>
+        </div>
+        
+        <form class="mt-8 grid grid-cols-6 gap-6">
+          <div class="col-span-6">
+            <label for="FirstName" class="block text-sm font-semibold text-gray-700">
+              الرقم الوظيفي
+            </label>
+
+            <input type="text" id="FirstName" name="first_name"
+              class="mt-1 w-80 rounded-s border-2 border-gray-200 bg-white text-sm text-gray-700 p-2 text-right" />
+            </div>
+            <div class="col-span-6">
+              <label for="Password" class="block text-sm font-semibold text-gray-700 ">
+                كلمة المرور
+              </label>
+            
+              <input type="password" id="Password" name="password"
+                class="mt-1 w-80 rounded-md border-2 border-gray-200 bg-white text-sm text-gray-700 p-2 text-right" />
+            </div>
+            <div class="col-span-6">
+              <label for="MarketingAccept" class="flex flex-row-reverse gap-4">
+                <input type="checkbox" id="MarketingAccept" name="marketing_accept"
+                  class="h-5 w-5 rounded-md border-gray-200 bg-white shadow-sm" />
+            
+                <span class="text-sm text-gray-700 underline">
+                  تذكرني
+                </span>
+              </label>
+            </div>
+            <div class="col-span-6  ">
+              <button
+                class="inline-block w-80 shrink-0 rounded-md border border-green-600 bg-gradient-to-bl from-green-300 to-green-900  px-12 py-3 text-sm font-semibold text-white transition hover:bg-gradient-to-br hover:text-gray-50 focus:outline-none active:text-white">
+                تسجيل الدخول </button>
+            </div>
+            <div class="col-span-6">
+              <p class="text-sm text-gray-500 text-center">
+                <a class="text-gray-700 font-bold underline">
+                  استعادة كلمة المرور </a>
+              </p>
+            </div>
+            </form>
+            </div>
+            </main>
+            </div>
+            </section>
