--- a/src/app/pages/tasks/components/tasks-list/tasks-list.component.html
+++ b/src/app/pages/tasks/components/tasks-list/tasks-list.component.html
@@ -3,11 +3,11 @@
   <section class="bg-white mb-5">
     <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16">
       <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">
-        manage tasks</h1>
-      <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
+        ادارة المهام</h1>
+        <div class="flex flex-row space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
         <a
           class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300">
-          Delete
+          حذف
         </a>
         <app-tasks-create></app-tasks-create>
       </div>
