--- a/src/app/pages/tasks/components/tasks-list/tasks-list.component.html
+++ b/src/app/pages/tasks/components/tasks-list/tasks-list.component.html
@@ -5,10 +5,7 @@
       <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">
         ادارة المهام</h1>
         <div class="flex flex-row space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
-        <a
-          class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300">
-          حذف
-        </a>
+        <app-tasks-delete></app-tasks-delete>
         <app-tasks-create></app-tasks-create>
       </div>
     </div>
