--- a/src/app/pages/tasks/views/data-grid/data-grid.component.html
+++ b/src/app/pages/tasks/views/data-grid/data-grid.component.html
@@ -10,7 +10,7 @@
       </th>
       <th scope="col" class="px-6 py-3">
         <span class="flex">
-          Product name
+          عنوان المهمة
           <a><svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor"
               viewBox="0 0 320 512">
               <path
@@ -21,19 +21,7 @@
       <th scope="col" class="px-6 py-3">
         <span class="flex">
 
-          Color
-          <a><svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor"
-              viewBox="0 0 320 512">
-              <path
-                d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z" />
-            </svg></a>
-        </span>
-
-      </th>
-      <th scope="col" class="px-6 py-3">
-        <span class="flex">
-
-          Category
+          وصف المهمة
           <a><svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor"
               viewBox="0 0 320 512">
               <path
@@ -45,7 +33,7 @@
       <th scope="col" class="px-6 py-3">
         <span class="flex">
 
-          Price
+        تاريخ الانتهاء
           <a><svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor"
               viewBox="0 0 320 512">
               <path
@@ -57,7 +45,19 @@
       <th scope="col" class="px-6 py-3">
         <span class="flex">
 
-          Action
+          المستخدم
+          <a><svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor"
+              viewBox="0 0 320 512">
+              <path
+                d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z" />
+            </svg></a>
+        </span>
+
+      </th>
+      <th scope="col" class="px-6 py-3 mx-auto">
+        <span class="flex">
+
+          الاجراء
 
         </span>
 
@@ -65,7 +65,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr class="bg-white border-b  hover:bg-gray-50 ">
+    <tr class="bg-white border-b  hover:bg-gray-50 " *ngFor="let task of (tasks$|async)">
       <td class="w-4 p-4">
         <div class="flex items-center">
           <input id="checkbox-table-search-1" type="checkbox"
@@ -74,43 +74,20 @@
         </div>
       </td>
       <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap ">
-        Apple MacBook Pro 17"
+        {{task.title}}
       </th>
       <td class="px-6 py-4">
-        Silver
+        {{task.description}}
       </td>
       <td class="px-6 py-4">
-        Laptop
+      {{task.deadline}}
       </td>
       <td class="px-6 py-4">
-        $2999
+        {{task.userId||'بدون'}}
       </td>
-      <td class="px-6 py-4">
+      <td class="px-6 py-4 flex justify-around">
         <a class="font-medium text-green-600  hover:underline">Edit</a>
-      </td>
-    </tr>
-    <tr class="bg-white border-b  hover:bg-gray-50 ">
-      <td class="w-4 p-4">
-        <div class="flex items-center">
-          <input id="checkbox-table-search-2" type="checkbox"
-            class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 focus:ring-2 ">
-          <label for="checkbox-table-search-2" class="sr-only">checkbox</label>
-        </div>
-      </td>
-      <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap ">
-        Microsoft Surface Pro
-      </th>
-      <td class="px-6 py-4">
-        White
-      </td>
-      <td class="px-6 py-4">
-        Laptop PC
-      </td>
-      <td class="px-6 py-4">
-        $1999
-      </td>
-      <td class="px-6 py-4">
-        <a class="font-medium text-green-600  hover:underline">Edit</a>
+        <a class="font-medium text-red-600  hover:underline">Remove</a>
       </td>
     </tr>
   </tbody>
