--- a/src/app/pages/tasks/views/data-grid/data-grid.component.html
+++ b/src/app/pages/tasks/views/data-grid/data-grid.component.html
@@ -64,7 +64,7 @@
       </th>
     </tr>
   </thead>
-  <tbody>
+  <tbody *ngIf="tasks$['length'] != 0; else notFound ">
     <tr class="bg-white border-b  hover:bg-gray-50 " *ngFor="let task of (tasks$|async)">
       <td class="w-4 p-4">
         <div class="flex items-center">
@@ -91,4 +91,9 @@
       </td>
     </tr>
   </tbody>
+  <ng-template #notFound>
+    <div class="flex justify-center items-center">
+      <h1 class="text-2xl font-bold">لا يوجد مهام</h1>
+    </div>
+  </ng-template>
 </table>
