--- a/src/app/pages/tasks/components/tasks-list/tasks-list.component.html
+++ b/src/app/pages/tasks/components/tasks-list/tasks-list.component.html
@@ -16,9 +16,10 @@
 <!-- Data Grid Component -->
 
 <div class="relative overflow-x-auto shadow-md sm:rounded-lg mx-10">
-  <app-data-grid></app-data-grid>
+  <app-data-grid [data]="tasks$"></app-data-grid>
   <!-- PaginationComponent -->
-  <app-pagination></app-pagination>
+  <app-pagination [current]="current" [total]="totalItems" [totalPages]="totalPages" (goTo)="onGoTo($event)" (next)="onNext($event)"
+  (previous)="onPrevious($event)"></app-pagination>
   <!-- PaginationComponent -->
 </div>
 <!-- Data Grid Component -->
