--- a/src/app/pages/tasks/views/pagination/pagination.component.html
+++ b/src/app/pages/tasks/views/pagination/pagination.component.html
@@ -4,35 +4,29 @@
     <span class="font-semibold text-gray-900 ">1000</span></span>
   <ul class="inline-flex items-center -space-x-px">
     <li>
-      <a
+      <button [disabled]="current <= 0" (click)="onPrevious()" type="button"
         class="block px-3 py-2 ml-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700 ">
         <span class="sr-only">Previous</span>
         <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg">
+          xmlns="http://www.w3.org/2000/svg" >
           <path fill-rule="evenodd"
             d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
             clip-rule="evenodd"></path>
         </svg>
-      </a>
+      </button>
     </li>
+  <ng-container *ngFor="let page of pages; index as i">
     <li>
-      <a
-        class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">1</a>
+      <a *ngIf="page !== -1; else more" [aria-current]="page === current? 'page': ''" (click)="onGoTo(page)"
+        class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">{{page}}</a>
+      <ng-template #more>
+        <a
+          class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">...</a>
+      </ng-template>
     </li>
+  </ng-container>
     <li>
-      <a aria-current="page"
-        class="z-10 px-3 py-2 leading-tight text-green-600 border border-blue-300 bg-blue-50 hover:bg-blue-100 hover:text-green-700 ">3</a>
-    </li>
-    <li>
-      <a
-        class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">...</a>
-    </li>
-    <li>
-      <a
-        class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">100</a>
-    </li>
-    <li>
-      <a
+      <button [disabled]="current === totalPages" (click)="onNext()" type="button"
         class="block px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700 ">
         <span class="sr-only">Next</span>
         <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
@@ -41,7 +35,7 @@
             d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
             clip-rule="evenodd"></path>
         </svg>
-      </a>
+      </button>
     </li>
   </ul>
 </nav>
