--- a/src/app/pages/tasks/views/pagination/pagination.component.html
+++ b/src/app/pages/tasks/views/pagination/pagination.component.html
@@ -5,15 +5,9 @@
     <span class="font-semibold text-gray-900 ">{{totalPages}} pages </span></span>
   <ul class="inline-flex items-center -space-x-px">
     <li>
-      <button [disabled]="current <= 0" (click)="onPrevious()" type="button"
-        class="block px-3 py-2 ml-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700 ">
-        <span class="sr-only">Previous</span>
-        <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg" >
-          <path fill-rule="evenodd"
-            d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
-            clip-rule="evenodd"></path>
-        </svg>
+      <button [disabled]="current <= 0" (click)="onPrevious()" type="button">
+        <a
+          class="px-3 py-2 ml-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700">Previous</a>
       </button>
     </li>
   <ng-container *ngFor="let page of pages; index as i">
@@ -28,14 +22,9 @@
   </ng-container>
     <li>
       <button [disabled]="current === totalPages" (click)="onNext()" type="button"
-        class="block px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700 ">
-        <span class="sr-only">Next</span>
-        <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-            clip-rule="evenodd"></path>
-        </svg>
+        >
+            <a 
+              class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700">Next</a>
       </button>
     </li>
   </ul>
