--- a/src/app/pages/tasks/views/data-grid/data-grid.component.html
+++ b/src/app/pages/tasks/views/data-grid/data-grid.component.html
@@ -1,15 +1,15 @@
-<table class="w-full text-sm text-left text-gray-500 ">
+<table class="max-w-full w-full text-sm text-center text-gray-500 ">
   <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
     <tr>
       <th scope="col" class="p-4">
         <div class="flex items-center">
           <input id="checkbox-all-search" type="checkbox"
-            class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 focus:ring-2 ">
+            class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 focus:ring-2 " disabled>
           <label for="checkbox-all-search" class="sr-only">checkbox</label>
         </div>
       </th>
       <th scope="col" class="px-6 py-3">
-        <span class="flex">
+        <span class="flex justify-center">
           عنوان المهمة
           <a><svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor"
               viewBox="0 0 320 512">
@@ -19,7 +19,7 @@
         </span>
       </th>
       <th scope="col" class="px-6 py-3">
-        <span class="flex">
+        <span class="flex justify-center">
 
           وصف المهمة
           <a><svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor"
@@ -31,7 +31,7 @@
 
       </th>
       <th scope="col" class="px-6 py-3">
-        <span class="flex">
+        <span class="flex justify-center">
 
         تاريخ الانتهاء
           <a><svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor"
@@ -43,7 +43,7 @@
 
       </th>
       <th scope="col" class="px-6 py-3">
-        <span class="flex">
+        <span class="flex justify-center">
 
           المستخدم
           <a><svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor"
@@ -55,7 +55,7 @@
 
       </th>
       <th scope="col" class="px-6 py-3 mx-auto">
-        <span class="flex">
+        <span class="flex justify-center">
 
           الاجراء
 
@@ -69,7 +69,7 @@
       <td class="w-4 p-4">
         <div class="flex items-center">
           <input id="checkbox-table-search-1" type="checkbox"
-            class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 focus:ring-2 ">
+            class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 focus:ring-2 " (change)="onTaskChange(task.id)">
           <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
         </div>
       </td>
