styling inbox page

--- a/src/app/pages/auth/components/signin/signin.component.html
+++ b/src/app/pages/auth/components/signin/signin.component.html
@@ -5,7 +5,7 @@
         class="absolute inset-0 h-full w-full object-cover opacity-80" />
 
       <div class="hidden lg:relative lg:block lg:p-12">
-        <a class="block text-white" href="/">
+        <a class="block text-white" >
           <span class="sr-only">Home</span>
           <img src="../../../../../assets/asir_logo.jpg" class="h-8 sm:h-10 rounded-full" alt="">
         </a>
@@ -25,7 +25,7 @@
       <div class="max-w-xl lg:max-w-3xl">
         <div class="relative -mt-16 block lg:hidden">
           <a class="inline-flex h-16 w-16 items-center justify-center rounded-full bg-white text-blue-600 sm:h-20 sm:w-20"
-            href="/">
+            >
             <span class="sr-only">Home</span>
             <img src="../../../../../assets/logo_2.jpg" class="h-max  rounded-full" alt="">
           </a>
