--- a/src/app/shared/breadcrumb/breadcrumb.component.html
+++ b/src/app/shared/breadcrumb/breadcrumb.component.html
@@ -14,7 +14,7 @@
     <li>
       <div class="flex items-center">
 
-        <a href="#" class="ml-1 text-sm font-medium text-gray-700 hover:text-green-600 md:ml-2">{{supProgramName}}</a>
+        <a class="ml-1 text-sm font-medium text-gray-700 hover:text-green-600 md:ml-2">{{supProgramName}}</a>
 
         <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
           xmlns="http://www.w3.org/2000/svg">
