--- a/src/app/pages/inbox/views/search-bar/search-bar.component.html
+++ b/src/app/pages/inbox/views/search-bar/search-bar.component.html
@@ -1,25 +1,51 @@
-<div class="">
-  <form class="flex flex-row-reverse items-center">
-    <div class="">
-      <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
-        <svg aria-hidden="true" class="w-5 h-5 text-gray-500 " fill="currentColor" viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-            clip-rule="evenodd"></path>
-        </svg>
+<div class="inline-block w-full bg-white rounded-sm shadow-md px-2 py-1">
+
+  <form class="">
+    <div class="flex flex-row-reverse ">
+      <label for="search-dropdown" class="mb-2 text-sm font-medium text-gray-900 sr-only">Your
+      </label>
+      <button id="dropdown-button" data-dropdown-toggle="dropdown"
+        class="flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-r-sm hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100  "
+        type="button">كل المعاملات
+        <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+          aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path>
+        </svg></button>
+      <div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-sm shadow w-44 ">
+        <ul class="py-2 text-sm text-gray-700" aria-labelledby="dropdown-button">
+          <li>
+            <button type="button"
+              class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mockups</button>
+          </li>
+          <li>
+            <button type="button"
+              class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Templates</button>
+          </li>
+          <li>
+            <button type="button"
+              class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Design</button>
+          </li>
+          <li>
+            <button type="button"
+              class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Logos</button>
+          </li>
+        </ul>
       </div>
-      <input type="text" id="simple-search"
-        class="bg-gray-50 border border-gray-200 text-gray-900 text-sm text-right rounded-s shadow-md p-2.5 pl-20 ml-5 w-100"
-        placeholder="البحث باسم معاملة" required>
-    </div>
-    <button type="submit"
-      class="p-2.5 ml-2 text-sm font-medium text-white bg-green-700 rounded-lg border border-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-blue-300">
-      <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-      </svg>
-      <span class="sr-only">البحث باسم معاملة</span>
-    </button>
+        <div class="relative w-full mr-2">
+          <input type="search" id="search-dropdown"
+            class="inline-block py-3 w-full z-20  text-right text-sm text-gray-900 bg-gray-50 rounded-s  border border-gray-300 focus:ring-green-500 focus:border-green-500 "
+            placeholder="البحث باسم المعاملة..." required>
+        </div>
+      <button type="button"
+        class="text-white bg-gradient-to-bl from-green-500 to-green-800 hover:bg-gradient-to-r focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-sm text-sm p-2.5 text-center inline-flex items-center mr-2 ">
+        <svg fill="none" class="w-5 h-5" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"></path>
+        </svg>
+        <span class="sr-only">Icon description</span>
+        </button>
+      </div>
   </form>
-</div>
+  </div>
+  
