--- a/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
+++ b/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
@@ -1,5 +1,5 @@
-<div class="bg-white rounded-s shadow-md">
-  <ul class="flex flex-wrap flex-row-reverse text-sm font-medium text-center text-gray-500 dark:text-gray-400 ml-2">
+<div class="flex-none bg-white rounded-s shadow-md">
+  <ul class="flex flex-nowrap flex-row-reverse text-sm font-medium text-center text-gray-500 ">
     <li class="mr-2">
       <a
         class="inline-block px-4 py-2 my-1 text-white border-solid border-2 border-gray-200  bg-gradient-to-bl from-green-400 to-green-700 rounded-sm shadow-inner">الجميع</a>
