--- a/src/styles.sass
+++ b/src/styles.sass
@@ -8,3 +8,11 @@ body
   font-family: 'Almarai', sans-serif
   background-color: #f8f8f8
   text-align: right
+svg
+  width: 1em
+  height: 1em
+  fill: none
+  display: inline-block
+  font-size: inherit
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms
+  cursor: pointer
