--- a/src/app/pages/inbox/components/detailed/detailed.component.html
+++ b/src/app/pages/inbox/components/detailed/detailed.component.html
@@ -14,35 +14,19 @@
     </p>
   </div>
   <hr
-    class="my-12 h-px border-t-0 bg-transparent bg-gradient-to-r from-transparent via-neutral-500 to-transparent opacity-25 dark:opacity-100" />
+    class="my-4 h-px border-t-0 bg-transparent bg-gradient-to-r from-transparent via-neutral-500 to-transparent opacity-25 " />
+    <div class="mx-5 my-4">
   <p>الاجراءات السريعة</p>
-  <div>
+  <div class="flex flex-row-reverse flex-wrap mt-2">
     <button type="button"
-      class="text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Purple
-      to Blue</button>
-    <button type="button"
-      class="text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Cyan
-      to Blue</button>
-    <button type="button"
-      class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Green
-      to Blue</button>
-    <button type="button"
-      class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Purple
-      to Pink</button>
-    <button type="button"
-      class="text-white bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Pink
-      to Orange</button>
-    <button type="button"
-      class="text-gray-900 bg-gradient-to-r from-teal-200 to-lime-200 hover:bg-gradient-to-l hover:from-teal-200 hover:to-lime-200 focus:ring-4 focus:outline-none focus:ring-lime-200 dark:focus:ring-teal-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Teal
-      to Lime</button>
-    <button type="button"
-      class="text-gray-900 bg-gradient-to-r from-red-200 via-red-300 to-yellow-200 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Red
-      to Yellow</button>
+      class="text-white bg-green-600  focus:ring-4 focus:outline-none focus:ring-green-200 font-medium rounded-sm shadow-md text-sm px-6 py-2 text-center mr-2 mb-2">احالة</button>
+      
+  </div>
   </div>
   <div class="flex justify-center">
     <!-- Dropdown menu -->
     <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown"
-      class="text-white bg-gradient-to-bl from-green-300 to-green-800 hover:bg-green-900 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-s text-sm px-12 py-2.5 text-center inline-flex items-center "
+      class="text-white bg-gradient-to-bl from-green-300 to-green-800 hover:bg-green-900 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-sm text-sm px-12 py-2.5 text-center inline-flex items-center "
       type="button">مذكرة داخلية <svg class="w-4 h-4 ml-2" aria-hidden="true" fill="none" stroke="currentColor"
         viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
