--- a/src/app/pages/tasks/components/tasks-list/tasks-list.component.html
+++ b/src/app/pages/tasks/components/tasks-list/tasks-list.component.html
@@ -1,7 +1,7 @@
 <header>
   <!-- Jumbotron -->
-  <section class="bg-white mb-5">
-    <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16">
+  <section class="bg-white shadow-md rounded-b-md mb-5">
+    <div class="py-8 px-4 mx-auto max-w-screen-xl flex flex-row-reverse items-center justify-between lg:py-16">
       <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">
         ادارة المهام</h1>
         <div class="flex flex-row space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
