--- a/src/app/pages/inbox/components/home/home.component.html
+++ b/src/app/pages/inbox/components/home/home.component.html
@@ -1,3 +1,7 @@
+<!-- nav-bar -->
+<app-nav-bar></app-nav-bar>
+<!-- nav-bar -->
+
 <!-- breadcrumb and header -->
 <div class="m-5 ">
     <app-breadcrumb [supProgramName]="'البريد'" [childSubProgramName]="'الوارد'"></app-breadcrumb>
