--- a/src/app/pages/tasks/views/tasks-create/tasks-create.component.html
+++ b/src/app/pages/tasks/views/tasks-create/tasks-create.component.html
@@ -18,43 +18,7 @@
       </button>
     </div>
     <div class="p-6 space-y-6 " modal-body>
-      <form class="flex flex-col flex-shrink items-stretch justify-center">
-        <div>
-          <label for="name" class="block mb-2 text-sm font-medium text-gray-900 "> عنوان المهمة</label>
-          <input type="text" name="name" id="name"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 "
-            placeholder="" required>
-        </div>
-        <div>
-          <label for="description" class="block mb-2 text-sm font-medium text-gray-900 ">
-            وصف المهمة</label>
-          <input type="text" name="description" id="description" placeholder=""
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 "
-            required>
-        </div>
-        <div>
-          <label for="user" class="block mb-2 text-sm font-medium text-gray-900 ">
-            المستخدم</label>
-          <select name="user" id="user" class="bg-white divide-y divide-gray-100 rounded-lg shadow py-2  w-full">
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="mercedes">Mercedes</option>
-            <option value="audi">Audi</option>
-          </select>
-        </div>
-          <div>
-            <label for="deadline" class="block mb-2 text-sm font-medium text-gray-900 ">
-              تاريخ الانتهاء</label>
-            <input type="date" name="deadline" id="deadline" placeholder=""
-              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 "
-              required>
-          </div>
-        <div class=" flex items-center justify-center flex-shrink-0 mt-5">
-          <button
-            class="w-1/2 m-4 text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center ">الغاء</button>
-          <button type="submit"
-              class="w-1/2 m-4 text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center ">حفظ</button>
-            </div>
-          </form>
+      <app-task-form [empId]="empId" [editMode]="editMode" (dismiss)="onCloseHandled()"
+        (addNewTask)="addTask($event)"></app-task-form>
           </div>
   </app-modal>
