basic add functionality

--- a/src/app/pages/tasks/components/tasks-list/tasks-list.component.html
+++ b/src/app/pages/tasks/components/tasks-list/tasks-list.component.html
@@ -6,7 +6,7 @@
         ادارة المهام</h1>
         <div class="flex flex-row space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
         <app-tasks-delete></app-tasks-delete>
-        <app-tasks-create></app-tasks-create>
+        <app-tasks-create taskId=""></app-tasks-create>
       </div>
     </div>
   </section>
