--- a/src/app/pages/tasks/views/task-form/task-form.component.html
+++ b/src/app/pages/tasks/views/task-form/task-form.component.html
@@ -1,21 +1,19 @@
 <form [formGroup]="taskForm" (ngSubmit)="onSubmit()" class="flex flex-col flex-shrink items-stretch justify-center">
   <div>
-    <!-- <label for="name" class="block mb-2 text-sm font-medium text-gray-900 "> عنوان المهمة</label>
-    <input type="text" name="name" id="name"
+    <label for="name" class="block mb-2 text-sm font-medium text-gray-900 "> عنوان المهمة</label>
+    <input formControlName="taskName" type="text" name="name" id="name"
       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 "
-      placeholder="" required> -->
-    <app-input [control]="nameControl" type="text" label="عنوان المهمة" placeholder="" [value]="taskDetails?.title"
-      required></app-input>
+      placeholder="" required>
+    <!-- <app-input [control]="nameControl" type="text" label="عنوان المهمة" placeholder="" [value]="taskDetails?.title"
+      required></app-input> -->
     <!-- Name -->
   </div>
   <div>
-    <!-- <label for="description" class="block mb-2 text-sm font-medium text-gray-900 ">
+    <label for="description" class="block mb-2 text-sm font-medium text-gray-900 ">
       وصف المهمة</label>
-    <input type="text" name="description" id="description" placeholder=""
+    <input formControlName="taskDescription" type="text" name="description" id="description" placeholder=""
       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 "
-      required> -->
-    <app-input [control]="descriptionControl" type="text" label="وصف المهمة" placeholder=""
-      [value]="taskDetails?.description" required></app-input>
+      required>
   </div>
   <div>
     <label for="user" class="block mb-2 text-sm font-medium text-gray-900 ">
