--- a/src/app/pages/tasks/views/tasks-create/tasks-create.component.html
+++ b/src/app/pages/tasks/views/tasks-create/tasks-create.component.html
@@ -18,7 +18,7 @@
       </button>
     </div>
     <div class="p-6 space-y-6 " modal-body>
-      <app-task-form [empId]="empId" [editMode]="editMode" (dismiss)="onCloseHandled()"
+      <app-task-form [editMode]="editMode" (dismiss)="onCloseHandled()"
         (addNewTask)="addTask($event)"></app-task-form>
           </div>
   </app-modal>
