--- a/src/app/pages/tasks/views/tasks-create/tasks-create.component.html
+++ b/src/app/pages/tasks/views/tasks-create/tasks-create.component.html
@@ -22,3 +22,6 @@
         (addNewTask)="addTask($event)"></app-task-form>
           </div>
   </app-modal>
+  <!-- app-toast -->
+  <app-toast *ngIf="showToast" (dismiss)="dismissToast($event)" toastMessage="task deleted" toastType="success" toastTitle=""></app-toast>
+  <!-- app-toast -->
