--- a/src/app/pages/tasks/views/tasks-create/tasks-create.component.html
+++ b/src/app/pages/tasks/views/tasks-create/tasks-create.component.html
@@ -23,5 +23,6 @@
           </div>
   </app-modal>
   <!-- app-toast -->
-  <app-toast *ngIf="showToast" (dismiss)="dismissToast($event)" toastMessage="task deleted" toastType="success" toastTitle=""></app-toast>
+  <app-toast *ngIf="showToast" (dismiss)="dismissToast($event)" toastMessage="عملية ناجحة" toastType="success"
+    toastTitle=""></app-toast>
   <!-- app-toast -->
