--- a/src/app/shared/toast/toast.component.html
+++ b/src/app/shared/toast/toast.component.html
@@ -1,17 +1,20 @@
-<div id="toast-success" class="flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow "
+<div [ngSwitch]="toastType" class="fixed top-5 right-5  ">
+  <div *ngSwitchCase="'success'"
+    class="flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow "
   role="alert">
   <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg "
-    (click)="onDismissClick()">
-    <svg (click)="onDismissClick()" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
+    >
+    <svg  fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
       xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
       <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5"></path>
     </svg>
-    <span class="sr-only" (click)="onDismissClick()">Check icon</span>
+    <span class="sr-only">Check icon</span>
   </div>
   <div class="ml-3 text-sm font-normal">{{toastMessage}}</div>
   <button type="button"
+  (click)="onDismissClick()"
     class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8  "
-    data-dismiss-target="#toast-success" aria-label="Close">
+     aria-label="Close">
     <span class="sr-only">Close</span>
     <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
       aria-hidden="true">
@@ -19,45 +22,71 @@
     </svg>
   </button>
 </div>
-<div id="toast-danger" class="flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow "
+<div *ngSwitchCase="'error'"
+  class="flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow "
   role="alert">
   <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg ">
-    <svg (click)="onDismissClick()" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-      xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5"></path>
-    </svg>
+  <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+    aria-hidden="true">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
+  </svg>
     <span class="sr-only">Error icon</span>
   </div>
-  <div class="ml-3 text-sm font-normal">Item has been deleted.</div>
+  <div class="ml-3 text-sm font-normal">{{toastMessage}}</div>
   <button type="button"
-    class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8 "
-    data-dismiss-target="#toast-danger" aria-label="Close">
+  (click)="onDismissClick()"
+    class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8  "
+     aria-label="Close">
     <span class="sr-only">Close</span>
-    <svg (click)="onDismissClick()" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-      xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5"></path>
+    <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+      aria-hidden="true">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
     </svg>
   </button>
 </div>
-<div id="toast-warning" class="flex items-center w-full max-w-xs p-4 text-gray-500 bg-white rounded-lg shadow "
+<div *ngSwitchCase="'warning'" class="flex items-center w-full max-w-xs p-4 text-gray-500 bg-white rounded-lg shadow "
   role="alert">
   <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-orange-500 bg-orange-100 rounded-lg ">
-    <svg (click)="onDismissClick()" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-      xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5"></path>
-    </svg>
-    <span class="sr-only">Warning icon</span>
-  </div>
-  <div class="ml-3 text-sm font-normal">Improve password difficulty.</div>
-  <button type="button"
-    class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8 "
-    data-dismiss-target="#toast-warning" aria-label="Close">
-    <span class="sr-only">Close</span>
     <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
       aria-hidden="true">
       <path stroke-linecap="round" stroke-linejoin="round"
         d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z">
       </path>
     </svg>
+    <span class="sr-only">Warning icon</span>
+  </div>
+  <div class="ml-3 text-sm font-normal">{{toastMessage}}</div>
+  <button type="button"
+  (click)="onDismissClick()"
+    class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8  "
+     aria-label="Close">
+    <span class="sr-only">Close</span>
+    <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+      aria-hidden="true">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
+      </svg>
+      </button>
+      </div>
+      
+      <div *ngSwitchDefault class="flex items-center w-full max-w-xs p-4 text-gray-500 bg-white rounded-lg shadow "
+        role="alert">
+        <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-gray-500 bg-gray-100 rounded-lg ">
+          <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M12 9v3.75m9-.75a9 9 0 11-18 0 9 9 0 0118 0zm-9 3.75h.008v.008H12v-.008z"></path>
+          </svg>
+    <span class="sr-only">Unknown icon</span>
+    </div>
+    <div class="ml-3 text-sm font-normal"> {{toastMessage}} </div>
+    <button type="button" (click)="onDismissClick()"
+      class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8  "
+      aria-label="Close">
+      <span class="sr-only">Close</span>
+      <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+        aria-hidden="true">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
+      </svg>
   </button>
+</div>
 </div>
