--- a/src/app/shared/confirm-modal/confirm-modal.component.html
+++ b/src/app/shared/confirm-modal/confirm-modal.component.html
@@ -1,4 +1,5 @@
-<div id="popup-modal" tabindex="-1" class="w-1/2 h-1/2 absolute top-1/4 left-1/4 rounded-lg p-4  backdrop-blur-3xl">
+<div id="popup-modal" tabindex="-1"
+  class="w-1/2 h-1/2 absolute top-1/4 left-1/4 rounded-3xl  p-4 flex items-center justify-center backdrop-blur-md">
   <div class="relative w-full max-w-md max-h-full">
     <div class="relative bg-white rounded-lg shadow ">
       <div class="modal-header">
