--- a/src/app/shared/toast/toast.component.html
+++ b/src/app/shared/toast/toast.component.html
@@ -10,7 +10,7 @@
     </svg>
     <span class="sr-only">Check icon</span>
   </div>
-  <div class="ml-3 text-sm font-normal">{{toastMessage}}</div>
+  <div class="ml-3 text-sm font-normal">عملية ناجحة</div>
   <button type="button"
   (click)="onDismissClick()"
     class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8  "
@@ -32,7 +32,7 @@
   </svg>
     <span class="sr-only">Error icon</span>
   </div>
-  <div class="ml-3 text-sm font-normal">{{toastMessage}}</div>
+  <div class="ml-3 text-sm font-normal">عذرا , حدث خطأ</div>
   <button type="button"
   (click)="onDismissClick()"
     class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8  "
@@ -55,7 +55,7 @@
     </svg>
     <span class="sr-only">Warning icon</span>
   </div>
-  <div class="ml-3 text-sm font-normal">{{toastMessage}}</div>
+  <div class="ml-3 text-sm font-normal">تحذير عملية خطيرة</div>
   <button type="button"
   (click)="onDismissClick()"
     class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8  "
