--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <!-- component -->
 <div class="h-screen w-screen">
-    <!-- TODO: Remove below code to the shared module -->
+    <!-- TODO: add side bar code to the shared module -->
    
     <main class="">
     <router-outlet></router-outlet>
+    
     </main>
 </div>
