--- a/src/app/shared/loading-spinner/loading-spinner.component.html
+++ b/src/app/shared/loading-spinner/loading-spinner.component.html
@@ -1,3 +1,4 @@
+<div class="flex items-center justify-center w-screen h-screen">
 <div class="spinner">
   <div></div>
   <div></div>
@@ -5,4 +6,5 @@
   <div></div>
   <div></div>
   <div></div>
+</div>
 </div>
